# comp-302

./: README.md  induction-exercises.ml
class_notes/: dune-project
class_notes/_build/: .db  .digest-db  log
class_notes/_build/default/: class_notes.dune-package  class_notes.install
class_notes/lib/: dune
class_notes/test/: dune
homework/hw1/: dune-project
homework/hw1/_build/: .db  .digest-db  log
homework/hw2/: dune-project
homework/hw2/_build/: .db  log  (+1 more)
homework/hw3/: dune-project
midterm_practice/: dune-project
midterm_practice/_build/: .db  .digest-db  log
midterm_practice/_build/default/: midterm_practice.dune-package
midterm_practice/_build/default/lib/: midterm_practice.cma  midterm_practice.cmxa  midterm_practice.cmxs
midterm_practice/_build/default/lib/.merlin-conf/: lib-midterm_practice
midterm_practice/_build/default/lib/.midterm_practice.objs/byte/: midterm_practice.cmi  midterm_practice.cmo  midterm_practice.cmt
midterm_practice/_build/default/lib/.midterm_practice.objs/native/: midterm_practice.cmx
midterm_practice/_build/default/test/.merlin-conf/: exe-test_midterm_practice
midterm_practice/_build/default/test/.test_midterm_practice.eobjs/byte/: dune__exe__Test_midterm_practice.cmi  dune__exe__Test_midterm_practice.cmti
midterm_practice/_build/default/test/.test_midterm_practice.eobjs/native/: dune__exe__Test_midterm_practice.cmx
midterm_practice/_build/install/default/lib/midterm_practice/: META  dune-package  opam
midterm_practice/lib/: dune
midterm_practice/test/: dune
ocaml_99/_build/: .db  .digest-db  log
(+63 files in other folders)
